
- The `regexp` and related functions now correctly handle and *require*
  strings in UTF-8 encoding.  As with any other function that requires
  strings to be encoded in Octave's native encoding, you can use
  `native2unicode` to convert from your preferred locale.  For example,
  the copyright symbol in UTF-8 is `native2unicode (169, "latin1")`.

#### Graphics backend

- The `legend` function has been entirely rewritten.  This fixes a
  number of historical bugs, but also implements new properties such as
  `"AutoUpdate"` and `"NumColumns"`.  The gnuplot toolkit---which is no
  longer actively maintained---still uses the old legend function.

- The `axis` function was updated which resolved 10 bugs affecting
  axes to which `"equal"` had been applied.

- Graphic primitives now accept a color property value of `"none"`
  which is useful when a particular primitive needs to be hidden
  (for example, the Y-axis of an axes object with `"ycolor" = "none"`)
  without hiding the entire primitive `"visibility" = "off"`.

- A new property `"FontSmoothing"` has been added to text and axes
  objects that controls whether anti-aliasing is used during the
  rendering of characters.  The default is `"on"` which produces smooth,
  more visually appealing text.

- The figure property `"windowscrollwheelfcn"`is now implemented.
  This makes it possible to provide a callback function to be executed
  when users manipulate the mouse wheel on a given figure.

- The figure properties `"pointer"`, `"pointershapecdata"`, and
  `"pointershapehotspot"` are now implemented.  This makes it possible
  to change the shape of the cursor (pointer in Matlab-speak) displayed
  in a plot window.

- The figure property `"paperpositionmode"` now has the default `"auto"`
  rather than `"manual"`.  This change is more intuitive and is
  Matlab compatible.

- The appearance of patterned lines `"LineStyle" = ":"|"--"|"-."` has
  been improved for small widths (`"LineWidth"` less than 1.5 pixels)