@@ -340,7 +340,7 @@ including function definitions.
 @table @code
 @item @var{octave-home}/share/octave/site/m/startup/octaverc
 @cindex site startup file
-where @var{octave-home} is the directory in which Octave is installed
+where @code{@var{octave-home}} is the directory in which Octave is installed
 (the default is @file{/usr/local}).
 This file is provided so that changes to the default Octave environment
 can be made globally for all users at your site for all versions of Octave
@@ -350,38 +350,42 @@ may be overridden by the environment variable @w{@env{OCTAVE_SITE_INITFILE}}.
 
 @item @var{octave-home}/share/octave/@var{version}/m/startup/octaverc
 @cindex version startup file
-where @var{octave-home} is the directory in which Octave is
-installed (the default is @file{/usr/local}), and @var{version}
-is the version number of Octave.  This file is provided so that changes
-to the default Octave environment can be made globally for all users of
-a particular version of Octave.  Care should be taken when making
-changes to this file since all users of Octave at your site will be
-affected.  The default file may be overridden by the environment variable
-@w{@env{OCTAVE_VERSION_INITFILE}}.
+where @code{@var{octave-home}} is the directory in which Octave is installed
+(the default is @file{/usr/local}), and @code{@var{version}} is the version
+number of Octave.  This file is provided so that changes to the default
+Octave environment can be made globally for all users of a particular version
+of Octave.  Care should be taken when making changes to this file since all
+users of Octave at your site will be affected.  The default file may be
+overridden by the environment variable @w{@env{OCTAVE_VERSION_INITFILE}}.
+
+@item @var{config-dir}/octave/octaverc
+@cindex personal startup file
+where @code{@var{config-dir}} is the platform-dependent location for user
+local configuration files (e.g. @w{@env{$XDG_CONFIG_HOME}} on many Unix-like
+operating systems or @w{@env{%LOCALAPPDATA%}} on Windows).
 
 @item ~/.octaverc
 @cindex personal startup file
 @cindex @sortas{octaverc ~/.octaverc} @code{~/.octaverc}
-This file is used to make personal changes to the default
-Octave environment.
+This file is used to make personal changes to the default Octave environment.
 
 @item .octaverc
 @cindex project startup file
 @cindex @sortas{octaverc .octaverc} @code{.octaverc}
-This file can be used to make changes to the default Octave environment
-for a particular project.  Octave searches for this file in the current
-directory after it reads @file{~/.octaverc}.  Any use of the @code{cd}
-command in the @file{~/.octaverc} file will affect the directory where
-Octave searches for @file{.octaverc}.
+This file can be used to make changes to the default Octave environment for a
+particular project.  Octave searches for this file in the current directory
+after it reads @file{~/.octaverc}.  Any use of the @code{cd} command in the
+@file{~/.octaverc} file will affect the directory where Octave searches for
+@file{.octaverc}.
 
 If you start Octave in your home directory, commands from the file
 @file{~/.octaverc} will only be executed once.
 
 @item startup.m
 @cindex @code{startup.m}
-This file is used to make personal changes to the default
-Octave environment.  It is executed for @sc{matlab} compatibility, but
-@file{~/.octaverc} is the preferred location for configuration changes.
+This file is used to make personal changes to the default Octave environment.
+It is executed for @sc{matlab} compatibility, but @file{~/.octaverc} is the
+preferred location for configuration changes.
 @end table
 
 A message will be displayed as each of the startup files is read if you
