@@ -65,6 +65,8 @@ namespace octave
 
       static std::string get_temp_directory (void);
 
+      static std::string get_user_config_directory (void);
+
       static std::string get_program_name (void);
 
       static std::string get_program_invocation_name (void);
@@ -103,6 +105,8 @@ namespace octave
       std::string do_get_home_directory (void) const;
 
       std::string do_get_temp_directory (void) const;
+
+      std::string do_get_user_config_directory (void) const;
 
       std::string do_get_user_name (void) const;
 
