@@ -54,6 +54,11 @@ Summary of important user-visible changes for version 6 (yyyy-mm-dd):
   `native2unicode` to convert from your preferred locale.  For example,
   the copyright symbol in UTF-8 is `native2unicode (169, "latin1")`.
 
+- The startup file `octaverc` now can be located in the platform
+  dependent location for user local configuration files (e.g.
+  ${XDG_CONFIG_HOME}/octave/octaverc on Unix-like operating systems or
+  %LOCALAPPDATA%\octave\octaverc on Windows).
+
 #### Graphics backend
 
 - The `legend` function has been entirely rewritten.  This fixes a
